--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -3788,8 +3788,8 @@ input[type="button"].btn--primary:focus {
 }
 
 .s-about__pic {
-    width: var(--vspace-5);
-    height: var(--vspace-5);
+    width: 195px;
+    height: 190px;
     border: 1.6rem solid rgba(255, 255, 255, 0.02);
     border-radius: 50%;
 }
@@ -4787,3 +4787,9 @@ input[type="button"].btn--primary:focus {
         margin-right: 1.4rem;
     }
 }
+.center {
+    display: block;
+  margin-left: 40%;
+  margin-right: auto;
+  width: 50%;
+  }
